Fixed all the other stuff

--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
   </head>
   <body>
     <header class="header">
-      <img alt="" class="bild_skolan">
+
       <a href="index.html"><img src="img/ttb.png" alt="" class="bs_logo"></a>
       <nav>
         <ul>
-          <li id="home_button"><a href="index.html">HOME</a></li>
+          <li id="home_button"><a href="index.html">HEM</a></li>
           <li><a href="ram.html">RAM</a></li>
           <li><a href="chassi.html">CHASSI</a></li>
           <li><a href="gpu.html">GPU</a></li>
           <li><a href="cpu.html">CPU</a></li>
           <li><a href="nätreggregat.html">NÄTAGGREGAT</a></li>
+          <li><a href="moderkort.html">MODERKORT</a></li>
+          <li><a href="hårddisk.html">HÅRDDISK</a></li>
         </ul>
       </nav>
     </header>
@@ -31,7 +33,7 @@
       </p>
     </main>
     <footer>
-      <p>Designad av ©MillieFacts</p>
+      <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
     </footer>
   </body>
 </html>
