--- a/kontakta.html
+++ b/kontakta.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Carls Hemsida</title>
-    <link rel="stylesheet" href="css/chassi.css">
+    <link rel="stylesheet" href="css/kontakta.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/poop_emoji.png">
   </head>
@@ -25,9 +25,9 @@
       </nav>
     </header>
     <main class="main_title">
-      <h1>Chassi</h1>
+      <h1>Kontakt uppgifter</h1>
       <p>
-        Chassi är datorns kropp BOIIIIII!!!
+        Så du vill ha mina kontakt uppgifter bror? Then you will have it. If you want it, TAKE IT!
       </p>
     </main>
     <footer>
