--- a/nätreggregat.html
+++ b/nätreggregat.html
@@ -1,1 +1,37 @@
-<img src="img/poop_emoji.png" alt="">
+<!DOCTYPE html>
+<html lang="sv" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Carls Hemsida</title>
+    <link rel="stylesheet" href="css/nätaggregat.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="img/poop_emoji.png">
+  </head>
+  <body>
+    <header class="header">
+
+      <a href="index.html"><img src="img/ttb.png" alt="" class="bs_logo"></a>
+      <nav>
+        <ul>
+          <li id="home_button"><a href="index.html">HEM</a></li>
+          <li><a href="ram.html">RAM</a></li>
+          <li><a href="chassi.html">CHASSI</a></li>
+          <li><a href="gpu.html">GPU</a></li>
+          <li><a href="cpu.html">CPU</a></li>
+          <li><a href="nätreggregat.html">NÄTAGGREGAT</a></li>
+          <li><a href="moderkort.html">MODERKORT</a></li>
+          <li><a href="hårddisk.html">HÅRDDISK</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main_title">
+      <h1>Nätaggregat</h1>
+      <p>
+        Ström
+      </p>
+    </main>
+    <footer>
+      <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
+    </footer>
+  </body>
+</html>
