--- a/moderkort.html
+++ b/moderkort.html
@@ -25,9 +25,9 @@
       </nav>
     </header>
     <main class="main_title">
-      <h1>Hårddisken</h1>
+      <h1>Moderkort</h1>
       <p>
-        Hårddisken är en mycket smart komponent.
+        Moderkortet är där allt skit finns på datorn.
       </p>
     </main>
     <footer>
