--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <p>
         På denna hemsida kommer det finnas information och fakta om datorns
         olika komponenter och om hur datorn är uppbyggd. Faktan om dess olika komponenter
-        finner du i menyn längst upp till höger.
+        finner du i menyn längst upp till höger. <br>
+        Mitt namn är Carl Johansson, eller Calle som jag oftast kallas, och bor i Vänersborg.
       </p>
     </main>
     <footer>
