--- a/kontakta.html
+++ b/kontakta.html
@@ -29,6 +29,7 @@
       <p>
         Så du vill ha mina kontakt uppgifter bror? Then you will have it. If you want it, TAKE IT!
       </p>
+      <img src="img/Carl_pic.jpeg" class="Carl_pic">
     </main>
     <footer>
       <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
