--- a/kontakta.html
+++ b/kontakta.html
@@ -8,28 +8,17 @@
     <link rel="shortcut icon" href="img/poop_emoji.png">
   </head>
   <body>
-    <header class="header">
-
-      <a href="index.html"><img src="img/ttb.png" alt="" class="bs_logo"></a>
+    <header>
       <nav>
-        <ul>
-          <li id="home_button"><a href="index.html">HEM</a></li>
-          <li><a href="ram.html">RAM</a></li>
-          <li><a href="chassi.html">CHASSI</a></li>
-          <li><a href="gpu.html">GPU</a></li>
-          <li><a href="cpu.html">CPU</a></li>
-          <li><a href="nätreggregat.html">NÄTAGGREGAT</a></li>
-          <li><a href="moderkort.html">MODERKORT</a></li>
-          <li><a href="hårddisk.html">HÅRDDISK</a></li>
-        </ul>
+          <div id="home_button"><a href="index.html">HEM</a></div>
+          <div id="meny_button"><a href="meny.html">MENY</a></div>
       </nav>
     </header>
-    <main class="main_title">
+    <main>
       <h1>Kontakt uppgifter</h1>
       <p>
         Så du vill ha mina kontakt uppgifter bror? Then you will have it. If you want it, TAKE IT!
       </p>
-      <img src="img/Carl_pic.jpeg" class="Carl_pic">
     </main>
     <footer>
       <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
