--- a/meny.html
+++ b/meny.html
@@ -3,22 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Carls Hemsida</title>
-    <link rel="stylesheet" href="css/chassi.css">
+    <link rel="stylesheet" href="css/meny.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/poop_emoji.png">
   </head>
   <body>
-    <header>
+    <header class="header">
+
+      <a href="index.html"><img src="img/ttb.png" alt="" class="bs_logo"></a>
       <nav>
-        <div id="home_button"><a href="index.html">HEM</a></div>
-        <div id="meny_button"><a href="meny.html">MENY</a></div>
+        <ul>
+          <li id="home_button"><a href="index.html">HEM</a></li>
+        </ul>
       </nav>
     </header>
-    <main>
-      <h1>Chassi</h1>
-      <p>
-        Chassi är datorns kropp BOIIIIII!!!
-      </p>
+    <main class="main_title">
+      <h1>MENY</h1>
+
     </main>
     <footer>
       <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
