fixed meny page

--- a/hårddisk.html
+++ b/hårddisk.html
@@ -17,7 +17,7 @@
     <main>
       <h1>Hårddisk</h1>
       <p>
-        Här sparas och lagras allt man har på datorn.
+        Här sparas och lagras allt man har på datorn. SATA.
       </p>
     </main>
     <footer>
