--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         olika komponenter och om hur datorn är uppbyggd. Faktan om dess olika komponenter
         finner du i menyn längst upp till höger. <br>
         Mitt namn är Carl Johansson, eller Calle som jag oftast kallas, och bor i Vänersborg.
+
+        TRE KÄLLOR PÅ VARJE KOMPONENT!
       </p>
     </main>
     <footer>
