--- a/meny.html
+++ b/meny.html
@@ -8,18 +8,25 @@
     <link rel="shortcut icon" href="img/poop_emoji.png">
   </head>
   <body>
-    <header class="header">
-
-      <a href="index.html"><img src="img/ttb.png" alt="" class="bs_logo"></a>
+    <header>
       <nav>
-        <ul>
-          <li id="home_button"><a href="index.html">HEM</a></li>
-        </ul>
+        <div id="home_button"><a href="index.html">HEM</a></div>
+        <div id="meny_button"><a href="meny.html">MENY</a></div>
       </nav>
     </header>
-    <main class="main_title">
-      <h1>MENY</h1>
-
+    <main>
+      <div class="row1">
+        <a href="chassi.html">CHASSI</a>
+        <a href="cpu.html">CPU</a>
+        <a href="gpu.html">GPU</a>
+      </div>
+      <br>
+      <div class="row2">
+        <a href="hårddisk.html">HÅRDISK</a>
+        <a href="moderkort.html">MODERKORT</a>
+        <a href="nätaggregat.html">NÄTAGGREGAT</a>
+        <a href="ram.html">RAM</a>
+      </div>
     </main>
     <footer>
       <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
