--- a/moderkort.html
+++ b/moderkort.html
@@ -17,7 +17,7 @@
     <main>
       <h1>Moderkort</h1>
       <p>
-        Moderkortet är där allt skit finns på datorn.
+        Moderkortet är där allt skit finns på datorn. FORMFAKTOR. PCI Express
       </p>
     </main>
     <footer>
