--- a/kontakta.html
+++ b/kontakta.html
@@ -16,9 +16,21 @@
     </header>
     <main>
       <h1>Kontakt uppgifter</h1>
-      <p>
-        Så du vill ha mina kontakt uppgifter bror? Then you will have it. If you want it, TAKE IT!
-      </p>
+      <div class="wrapper">
+        <div class="om_text">
+          <h3>Om:</h3>
+          <p>
+            Så du vill ha mina kontakt uppgifter bror? Then you will have it. If you want it, TAKE IT!
+          </p>
+        </div>
+        <br>
+        <aside class="sociala_medier">
+          <h3>Sociala Medier:</h3>
+          <p><a href="https://www.instagram.com/tostleblogger/?hl=sv">Instagram:</a> tostleblogger</p>
+          <p><a href="img/snapcode.png">Snapchat:</a> kajol53</p>
+          <p>Email-adress: <br> <a href="mailto:kalle.johansson53@gmial.com">kalle.johansson53@gmail.com</a> </p>
+        </aside>
+      </div>
     </main>
     <footer>
       <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
