image on kontakta page

--- a/kontakta.html
+++ b/kontakta.html
@@ -20,20 +20,22 @@
         <div class="om_text">
           <h3>Om:</h3>
           <p>
-            Så du vill ha mina kontakt uppgifter bror? Then you will have it. If you want it, TAKE IT!
+            Mitt namn är Carl och du hittar mina social medier och min e-mail adress <br>
+            här intill :)
           </p>
         </div>
         <br>
         <aside class="sociala_medier">
+          <img src="img/Carl_pic.jpeg" alt="picture">
           <h3>Sociala Medier:</h3>
           <p><a href="https://www.instagram.com/tostleblogger/?hl=sv">Instagram:</a> tostleblogger</p>
           <p><a href="img/snapcode.png">Snapchat:</a> kajol53</p>
-          <p>Email-adress: <br> <a href="mailto:kalle.johansson53@gmial.com">kalle.johansson53@gmail.com</a> </p>
+          <p>Email-adress: <br> <a href="mailto:carjoh14@kfvelev.se">carjoh14@kfvelev.se</a> </p>
         </aside>
       </div>
     </main>
     <footer>
-      <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
+      <p>Designad av ©Kajolpro | <a href="kontakta.html">Kontakta</a></p>
     </footer>
   </body>
 </html>
