--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
       <h1>Datorns delar</h1>
       <p>
         På denna hemsida kommer det finnas information och fakta om datorns
-        olika komponenter och om hur datorn är uppbyggd. Faktan om dess olika komponenter
-        finner du i menyn längst upp till höger. <br>
-        Mitt namn är Carl Johansson, eller Calle som jag oftast kallas, och bor i Vänersborg.
-
-        TRE KÄLLOR PÅ VARJE KOMPONENT!
+        olika komponenter och om hur datorn är uppbyggd. <br> <br>
+        I menyn upp till höger hittar du datorns olika komponenter.
       </p>
     </main>
     <footer>
