--- a/meny.html
+++ b/meny.html
@@ -22,7 +22,7 @@
       </div>
       <br>
       <div class="row2">
-        <a href="hårddisk.html">HÅRDISK</a>
+        <a href="hårddisk.html">LAGRING</a>
         <a href="moderkort.html">MODERKORT</a>
         <a href="nätaggregat.html">NÄTAGGREGAT</a>
         <a href="ram.html">RAM</a>
