--- a/chassi.html
+++ b/chassi.html
@@ -15,13 +15,31 @@
       </nav>
     </header>
     <main>
-      <h1>Chassi</h1>
-      <p>
-        Chassi är datorns kropp BOIIIIII!!!
-      </p>
+      <div class="main_text">
+        <h1>Chassi</h1>
+        <p>
+          Man kan säga att chassit är datorns "kropp", ett slags skal för datorns komponenter. I chassit finns alla komponenter som en dator behöver,
+          förutom de externa enheter som också behövs så som bildskärmen. tangentbordet och musen. <br><br> Eftersom det är chassit som alla komponenter ska vara i är det
+          därför väldigt viktigt att man väljer rätt chassi. För om man inte gör det finns det en risk att de andra komponenterna inte får plats i chassit. De finns i olika
+          former, storlekar, material och färger. Formfaktorn är väldigt viktigt. Det avgör vilka moderkort och nätdelar som får plats i chassit och är stor del knuten till chassits storlek. Därför måste man även kolla
+            upp vilken formfaktor moderkortet har så att det får plats i chassit och så vidare. <br> <br>
+          Ett chassi kan både vara anpassad till att den ska vara liggande eller stående, torn som det ibland kallas. Förr byggdes för att det skulle ligga ned och anledning till
+          detta var att man senare skulle kunna ställa bildskärmen på chassit. Men nu för tiden byggs de som tornchassin.
+        </p>
+      </div>
+      <div class="">
+        <aside class="">
+          <img src="img/CHASSI.jpg" alt="">
+          <div>
+          <p>Källor: <br>
+            <a href="https://sv.wikipedia.org/wiki/Datorchassi">Wikipedia</a>
+          </p>
+        </div>
+        </aside>
+      </div>
     </main>
     <footer>
-      <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
+      <p>Designad av ©Kajolpro | <a href="kontakta.html">Kontakta</a></p>
     </footer>
   </body>
 </html>
