--- a/kontakta.html
+++ b/kontakta.html
@@ -25,12 +25,14 @@
           </p>
         </div>
         <br>
-        <aside class="sociala_medier">
+        <aside>
           <img src="img/Carl_pic.jpeg" alt="picture">
-          <h3>Sociala Medier:</h3>
-          <p><a href="https://www.instagram.com/tostleblogger/?hl=sv">Instagram:</a> tostleblogger</p>
-          <p><a href="img/snapcode.png">Snapchat:</a> kajol53</p>
-          <p>Email-adress: <br> <a href="mailto:carjoh14@kfvelev.se">carjoh14@kfvelev.se</a> </p>
+          <div>
+            <h3>Sociala Medier:</h3>
+            <p><a href="https://www.instagram.com/tostleblogger/?hl=sv">Instagram:</a> tostleblogger</p>
+            <p><a href="img/snapcode.png">Snapchat:</a> kajol53</p>
+            <p>Email-adress: <br> <a href="mailto:carjoh14@kfvelev.se">carjoh14@kfvelev.se</a> </p>
+          </div>
         </aside>
       </div>
     </main>
