--- a/chassi.html
+++ b/chassi.html
@@ -27,12 +27,12 @@
           detta var att man senare skulle kunna ställa bildskärmen på chassit. Men nu för tiden byggs de som tornchassin.
         </p>
       </div>
-      <div class="">
-        <aside class="">
+      <div>
+        <aside>
           <img src="img/CHASSI.jpg" alt="">
           <div>
           <p>Källor: <br>
-            <a href="https://sv.wikipedia.org/wiki/Datorchassi">Wikipedia</a>
+            <a href="https://sv.wikipedia.org/wiki/Datorchassi" target="_blank">Wikipedia</a>
           </p>
         </div>
         </aside>
