--- a/cpu.html
+++ b/cpu.html
@@ -2,7 +2,7 @@
 <html lang="sv" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Carls Hemsida</title>
+    <title>Datorns komponenter | CPU</title>
     <link rel="stylesheet" href="css/cpu.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/poop_emoji.png">
@@ -15,10 +15,32 @@
       </nav>
     </header>
     <main>
-      <h1>CPU</h1>
-      <p>
-        Är datorn hjärna och hjärta om du inte visste det redan!
-      </p>
+      <div class="main_text">
+        <h1>CPU</h1>
+        <p>
+          En processor, eller CPU som det också kallas (Central Processing Unit), är central processorn i en dator.
+          Den har i uppgift att utföra begärda operationer som till exempel beräkningar och datahanteringar och gör det genom att
+          hämta information från det primära minnet, RAM-minnet. Den begärda operationen representeras av en serie av tal och en processor kan
+          arbeta i två- eller tretakt vilket betyder att den <i> hämtar, adressberäknar </i> och <i> utför.</i> <br> <br>
+          En processor kan ha olika arkitekturer som det kallas. En processors arkitetkur är en benämning på hur mycket data en processor hantera
+          i varje cykel. En processor med 64-bitars arkitektur kan därmed flytta mer data i varje cykel än en processor med 32-bitar arkitektur vilket också gör
+          att en 64-bitars processor är mer kraftfull än en 32-bitars. Men eftersom den kan flytta mer data så behövs det också fler databussar,
+          med andra ord tar en 64-bitars processor upp mer yta. Ju mer bitar en processor har desto snabbare och kraftfullare är den.<br> <br>
+          Det är även viktigt att se till att man har ett moderkort som är kompatibel med den processor du väljer.
+        </p>
+      </div>
+      <div>
+        <aside>
+          <img src="img/AMD_cpu.jpg" alt="" id="cpu_whitebg">
+          <img src="img/32bit.jpg" alt="">
+          <img src="img/16bit.jpg" alt="" id="cpu_whitebg">
+          <div>
+          <p>Källor: <br>
+            <a href="https://sv.wikipedia.org/wiki/Processor" target="_blank">Wikipedia</a>
+          </p>
+        </div>
+        </aside>
+      </div>
     </main>
     <footer>
       <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
