--- a/kontakta.html
+++ b/kontakta.html
@@ -26,7 +26,7 @@
         </div>
         <br>
         <aside>
-          <img src="img/Carl_pic.jpeg" alt="picture">
+          <img src="img/snapcode.png" alt="picture">
           <div>
             <h3>Sociala Medier:</h3>
             <p><a href="https://www.instagram.com/tostleblogger/?hl=sv">Instagram:</a> tostleblogger</p>
