--- a/gpu.html
+++ b/gpu.html
@@ -15,10 +15,45 @@
       </nav>
     </header>
     <main>
-      <h1>GPU</h1>
-      <p>
-        Grafikkortet
-      </p>
+      <div class="main_text">
+        <h2>GPU</h2>
+        <p>
+          Grafikprocessorn i en dator, GPU:n (Graphics Processing Unit), en mikroprocessor som finns på datorns grafikkort. Skillnaden mellan GPU:n och CPU:n är
+          att GPU:n är optimerad för grafikrelaterade beräkningar medan CPU:n är till för allmänna beräkningar. Dess uppgift är alltså att ta hand om de
+          signaler från dator och ta de till bildskärmen och är den enheten som faktiskt utför de grafiska processerna. Den beräknar digitala "kartor" av vad som
+          ska visas på bildskärmen. Kartorna skickas senare till grafikkortets videobuffert, vilket är ett tilfälligt minne över vad som ska visas på texturer.
+        </p>
+        <h2>GRAFIKKORT</h2>
+        <p>
+          Grafikkortet är den enhet som GPU:n finns på och har som uppgift att tolka den bearbetande datan, som GPU:n bearbetat, till videosignaler
+          som senare visas på bildskärmen. Eftersom det är grafikkortet som utför arbetet som senare resulterar i en slutgiltig bild på skärmen är det
+          viktigt att ha en tillräckligt kraftfullt grafikkort och GPU. <br> <br>
+
+          Om man då har som syfte att kunna spela spel som har hög grafik eller om man ska hålla på med 3D-bildbehandling eller redigera videos på ett smidigt sätt
+          så krävs det att man har ett tillräckligt kraftfullt grafikkort. Videobuffertens, det tillfälliga minnets, storlek spelar även roll för ju mer komplicerade
+          saker som ska visas på skärmen desto mer data behövs lagras på det tillfälliga minnet. Det är även viktigt att se till att grafikkortet är kompatibelt med det
+          moderkort man valt. Datorns video-uttag finns även på grafikkortet, så som HDMI, Display-port eller VGA, och är därför viktigt att ha koll på. <br> <br>
+
+          De bästa grafikkkorten på marknaden idag är <i>AMD Radeon RX 5700</i> och <i>Nvidia GeForce RTX 2080 Ti.</i> AMD:s grafikkort kan kosta runt 4 300 kr och den har
+          8GB minne, en Display-port och en HDMI utgång med stöd för 4K upplösning. Den är bäst för de flesta personerna. Om man istället vill ha den allra bästa grafikkortet
+          så är det Nvidia:s som gäller då den har pålitlig stöd för 4K upplösning för apllikationer som stöder detta.
+          Denna har 11GB minne, tre stycken Display-port, ett HDMI-uttag, en USB-C och men kostar dock uppåt mot 14 000 kr.
+        </p>
+      </div>
+      <div>
+        <aside>
+          <img src="img/gpu.jpg" alt="">
+          <img src="img/gpu2.jpg" alt="" id="cpu_whitebg">
+          <img src="img/gpu3.jpg" alt="" id="cpu_whitebg">
+          <div>
+          <p>Källor: <br>
+            <a href="https://sv.wikipedia.org/wiki/Grafikprocessor" target="_blank">Wikipedia - GPU</a> <br>
+            <a href="https://sv.wikipedia.org/wiki/Grafikkort" target="_blank">Wikipedia - Grafikkort</a>
+            <a href="https://www.techradar.com/news/computing-components/graphics-cards/best-graphics-cards-1291458" target="_blank">Techradar</a>
+          </p>
+        </div>
+        </aside>
+      </div>
     </main>
     <footer>
       <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
