--- a/meny.html
+++ b/meny.html
@@ -18,7 +18,7 @@
       <div class="row1">
         <a href="chassi.html">CHASSI</a>
         <a href="cpu.html">CPU</a>
-        <a href="gpu.html">GPU</a>
+        <a href="gpu.html">GPU/GRAFIKKORT</a>
       </div>
       <br>
       <div class="row2">
