fixed background and compatibilty with smartphones

--- a/gpu.html
+++ b/gpu.html
@@ -2,6 +2,7 @@
 <html lang="sv" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carls Hemsida</title>
     <link rel="stylesheet" href="css/gpu.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -56,7 +57,7 @@
       </div>
     </main>
     <footer>
-      <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
+      <p>Designad av ©Kajolpro | <a href="kontakta.html">Kontakta</a></p>
     </footer>
   </body>
 </html>
