--- a/meny.html
+++ b/meny.html
@@ -24,6 +24,9 @@
       <div class="row2">
         <a href="hårddisk.html">LAGRING</a>
         <a href="moderkort.html">MODERKORT</a>
+      </div>
+      <br>
+      <div class="row3">
         <a href="nätaggregat.html">NÄTAGGREGAT</a>
         <a href="ram.html">RAM</a>
       </div>
