--- a/chassi.html
+++ b/chassi.html
@@ -2,10 +2,10 @@
 <html lang="sv" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Carls Hemsida</title>
+    <title>Datorns komponenter | CHASSI</title>
     <link rel="stylesheet" href="css/chassi.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/poop_emoji.png">
+    <link rel="shortcut icon" href="img/ttb.png">
   </head>
   <body>
     <header>
