--- a/gpu.html
+++ b/gpu.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carls Hemsida</title>
+    <title>Datorns komponenter | GPU/GRAFIKKORT</title>
     <link rel="stylesheet" href="css/gpu.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/poop_emoji.png">
+    <link rel="shortcut icon" href="img/ttb.png">
   </head>
   <body>
     <header>
@@ -49,8 +49,9 @@
           <div>
           <p>Källor: <br>
             <a href="https://sv.wikipedia.org/wiki/Grafikprocessor" target="_blank">Wikipedia - GPU</a> <br>
-            <a href="https://sv.wikipedia.org/wiki/Grafikkort" target="_blank">Wikipedia - Grafikkort</a>
-            <a href="https://www.techradar.com/news/computing-components/graphics-cards/best-graphics-cards-1291458" target="_blank">Techradar</a>
+            <a href="https://sv.wikipedia.org/wiki/Grafikkort" target="_blank">Wikipedia - Grafikkort</a> <br>
+            <a href="https://www.techradar.com/news/computing-components/graphics-cards/best-graphics-cards-1291458" target="_blank">Techradar</a> <br>
+            <a href="https://pediaa.com/what-is-difference-between-gpu-and-graphic-card/" target="_blank">Pediaa</a> <br>
           </p>
         </div>
         </aside>
