--- a/hårddisk.html
+++ b/hårddisk.html
@@ -15,11 +15,22 @@
       </nav>
     </header>
     <main>
-      <h1>Hårddisk</h1>
-      <p>
-        Här sparas och lagras allt man har på datorn. SATA.
-      </p>
-    </main>
+      <div class="main_text">
+        <h2>LAGRING</h2>
+        <p>fasdfasdfasdfasdfasdf</p>
+      </div>
+      <div>
+        <aside>
+          <img src="img/seagate.jpg" alt="">
+          <img src="img/ssd.jpg" alt="" id="cpu_whitebg">
+          <div>
+          <p>Källor: <br>
+            <a href="https://sv.wikipedia.org/wiki/H%C3%A5rddisk" target="_blank">Wikipedia - Hårddisk</a> <br>
+            <a href="https://sv.wikipedia.org/wiki/SSD-minne" target="_blank">Wikipedia - SSD</a>
+          </p>
+        </div>
+        </aside>
+      </div>
     <footer>
       <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
     </footer>
