--- a/meny.html
+++ b/meny.html
@@ -5,7 +5,7 @@
     <title>Carls Hemsida</title>
     <link rel="stylesheet" href="css/meny.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/poop_emoji.png">
+    <link rel="shortcut icon" href="img/ttb.png">
   </head>
   <body>
     <header>
