--- a/cpu.html
+++ b/cpu.html
@@ -5,7 +5,7 @@
     <title>Datorns komponenter | CPU</title>
     <link rel="stylesheet" href="css/cpu.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/poop_emoji.png">
+    <link rel="shortcut icon" href="img/ttb.png">
   </head>
   <body>
     <header>
@@ -18,15 +18,19 @@
       <div class="main_text">
         <h1>CPU</h1>
         <p>
-          En processor, eller CPU som det också kallas (Central Processing Unit), är central processorn i en dator.
+          En processor, eller CPU som det också kallas (Central Processing Unit), är central processorn i en dator, "hjärnan".
           Den har i uppgift att utföra begärda operationer som till exempel beräkningar och datahanteringar och gör det genom att
           hämta information från det primära minnet, RAM-minnet. Den begärda operationen representeras av en serie av tal och en processor kan
           arbeta i två- eller tretakt vilket betyder att den <i> hämtar, adressberäknar </i> och <i> utför.</i> <br> <br>
           En processor kan ha olika arkitekturer som det kallas. En processors arkitetkur är en benämning på hur mycket data en processor hantera
           i varje cykel. En processor med 64-bitars arkitektur kan därmed flytta mer data i varje cykel än en processor med 32-bitar arkitektur vilket också gör
           att en 64-bitars processor är mer kraftfull än en 32-bitars. Men eftersom den kan flytta mer data så behövs det också fler databussar,
-          med andra ord tar en 64-bitars processor upp mer yta. Ju mer bitar en processor har desto snabbare och kraftfullare är den.<br> <br>
+          med andra ord tar en 64-bitars processor upp mer yta. Ju fler <i>cores</i> en processor har desto mer data kan den hantera samtidigt och ju kraftfullare är den, då en core
+          är den enskilda processorn i en CPU.  <br> <br>
           Det är även viktigt att se till att man har ett moderkort som är kompatibel med den processor du väljer.
+          <br> <br>
+          Den bästa CPU:n idag är <i>AMD Ryzen 9 3900X</i> och <i>Intel Core i9-9900KS</i>. AMD:s har 12 cores och kan kosta runt 5 500kr. Intel:s har 8 cores och är den
+          mest populära CPU:n och den kosta runt 5 500kr.
         </p>
       </div>
       <div>
@@ -36,14 +40,16 @@
           <img src="img/16bit.jpg" alt="" id="cpu_whitebg">
           <div>
           <p>Källor: <br>
-            <a href="https://sv.wikipedia.org/wiki/Processor" target="_blank">Wikipedia</a>
+            <a href="https://sv.wikipedia.org/wiki/Processor" target="_blank">Wikipedia</a> <br>
+            <a href="https://techterms.com/definition/processor_core" target="_blank">Techterms</a> <br>
+            <a href="https://www.techradar.com/news/best-processors" target="_blank">Techradar</a> <br>
           </p>
         </div>
         </aside>
       </div>
     </main>
     <footer>
-      <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
+      <p>Designad av ©Kajolpro | <a href="kontakta.html">Kontakta</a></p>
     </footer>
   </body>
 </html>
