--- a/hårddisk.html
+++ b/hårddisk.html
@@ -5,7 +5,7 @@
     <title>Carls Hemsida</title>
     <link rel="stylesheet" href="css/hårddisk.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/poop_emoji.png">
+    <link rel="shortcut icon" href="img/ttb.png">
   </head>
   <body>
     <header>
@@ -17,22 +17,70 @@
     <main>
       <div class="main_text">
         <h2>LAGRING</h2>
-        <p>fasdfasdfasdfasdfasdf</p>
+        <p>All data på datorn måste lagras någonstans. Det är då datorns lagringsenheter som har i uppgift att lagra datan
+           och den slags lagring kallas för sekundär lagring. Det kallas så för att CPU:n inte använder den data
+           som är lagrad där i första hand. Data som inte används med en gång eller som ska sparas
+           till ett senare tillfälle lagras där.
+        </p>
+        <h4>HÅRDDISK</h4>
+        <p>En hårddisk, eller en HDD (Hard Disk Drive) som det också kallas, på en datorn är ett ställe
+          där information lagras. Den innehåller antingen en eller flera skivor som är belagda
+          med ett magnetiskt material. En läsarm rör sig över skivan för att senare läsa eller skriva data när
+          skivan befinner sig på rätt ställe. Den "skriver" data genom att ändra på det magnetiska materialet på skivan.
+          Eftersom det är fysiska delar som rör sig i en HDD är inte HDD:n den snabbaste lagrings enheten, även om
+          skivorna snurrar med en hastighet på ungefär 7200 RPM. En HDD kan ha skriv- och läshastigheter på ungefär 80-160 MB/s.
+          <br> <br>
+          Om man vill kunna ha en massa saker på sin dator, så som program, filer och spel så måste man se till
+          att man har tillräckligt med lagring på sin dator. Annars kan man få behöva ta beslut om vad man kan på sin dator
+          eller radera saker när det väl blir ont om plats på lagringen.
+          <br> <br>
+          Det finns även externa HDD:n man kan köpa om ens interna lagring tar slut. Dock är externa HDD:n oftast dyrare än interna.
+          En extern HDD från Seagate, vars namn är <i>Seagate Backup Plus Slim</i>, kostar ungefär 1 200 kr. De rörliga delarna i en HDD gör att
+          de är känsliga mot stötar, det vill säga om man tappar dem eller så. En intern HDD från Seagate, vars namn är
+          <i>Seagate Barracuda</i>, på 2TB kostar runt 750 kr.
+        </p>
+        <h4>SSD-minne</h4>
+        <p>SSD är också en sekundär lagring enhet och står för engelskans Solid State Drive. Den uppfyller samma funktion
+          som en hårddisk, att lagra information. Den är dock byggd på flashminnen och inte använder rörliga delar som hårddisken,
+          därmed fått sitt namn: Solid State Drive. Till skillnad från andra flashminnen så raderas inte datan på en SSD när
+          strömmen stängs av.
+          <br> <br>
+          Då en SDD inte använder rörliga delar gör den mycket snabbare, tystare och mindre känslig
+          för stötar än en hårddisk. I och med att en SSD använder flashminnen gör att den kan läsa och skriva information snabbare, och kan nå
+          skriv- och läshastigheter uppåt mot 200-520 MB/s.
+          <br> <br>
+          De interna SSD:n man kan ha istället för de interna HDD:n ser snarare ut som kretskort än ett block av metall. Man kan
+          även köpa externa SSD:n om man så vill det. Ju snabbare skriv- och läshastigheter man vill ha på sin SSD desto
+          mer kommer den att kosta. En intern SSD från Samsung, <i>Samsung SSD 970 EVO</i>, på 500 GB kostar runt 1 300kr. En extern SSD från Samsung,
+          <i>Samsung Portable SSD T5</i>, på 500 GB kostar runt 1 150kr.
+          <br> <br>
+          De interna SSD:n ansluts till moderkortet och därför är det viktigt att se till att den interna SSD:n du
+          valt passar med ansultningen på moderkortet.
+          <br> <br>
+          De externa lagringsenheterna ansluts med anslutningar så som USB och Thunderbolt.
+        </p>
       </div>
       <div>
         <aside>
           <img src="img/seagate.jpg" alt="">
-          <img src="img/ssd.jpg" alt="" id="cpu_whitebg">
+          <img src="img/internal_ssd.jpg" alt="" id="cpu_whitebg">
+          <img src="img/external_hdd.jpg" alt="" id="cpu_whitebg">
+          <img src="img/external_ssd.jpg" alt="">
           <div>
           <p>Källor: <br>
             <a href="https://sv.wikipedia.org/wiki/H%C3%A5rddisk" target="_blank">Wikipedia - Hårddisk</a> <br>
-            <a href="https://sv.wikipedia.org/wiki/SSD-minne" target="_blank">Wikipedia - SSD</a>
+            <a href="https://sv.wikipedia.org/wiki/SSD-minne" target="_blank">Wikipedia - SSD</a> <br>
+            <a href="https://tekhattan.com/blog/hardware/ssd-vs-hdd-speed-lifespan-and-reliability/" target="_blank">Tekhattan</a> <br>
+            <a href="https://www.clasohlson.com/se/Extern-h&aring;rddisk,-Seagate-Backup-Plus-Slim/p/38-8901" target="_blank">Clas Ohlson</a> <br>
+            <a href="https://www.netonnet.se/art/datorkomponenter/harddisk/sata-35-tum/seagate-barracuda-2tb-256mb-cache/1004738.8991/?gclid=EAIaIQobChMI7Nvsi9mV6QIVl4KyCh0dcAgzEAQYASABEgJQXfD_BwE" target="_blank">Netonnet - Seagate</a> <br>
+            <a href="https://www.netonnet.se/art/datorkomponenter/harddisk/ssdm2/samsung-970-evo-nvme-m-2-ssd-500gb/1003767.8994/?gclid=EAIaIQobChMIv-OJmNqV6QIVRMwYCh1ZjwvrEAQYBCABEgKSn_D_BwE" target="_blank">Netonnet - Samsung EVO</a>
+            <a href="https://www.netonnet.se/art/dator-surfplatta/datortillbehor/lagring/extern-ssd-harddisk/samsung-t5-external-ssd-500gb/248956.14090/?gclid=EAIaIQobChMIuevn99qV6QIVC8KyCh1P9A0KEAQYASABEgKaNPD_BwE" target="_blank">Netonnet - Samsung T5</a>
           </p>
         </div>
         </aside>
       </div>
     <footer>
-      <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
+      <p>Designad av ©Kajolpro | <a href="kontakta.html">Kontakta</a></p>
     </footer>
   </body>
 </html>
