--- a/meny.html
+++ b/meny.html
@@ -2,7 +2,7 @@
 <html lang="sv" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Carls Hemsida</title>
+    <title>Datorns komponenter | MENY</title>
     <link rel="stylesheet" href="css/meny.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/ttb.png">
