--- a/ram.html
+++ b/ram.html
@@ -34,6 +34,10 @@
           Det första RAM-minnet med en 184 pin anslutning har en maxhastighet på 3 200 MB/s medan det snabbaste, DDR4, har en hastighet på 28 800 MB/s och har en 288 pin anslutning. <br> <br>
           Det bästa RAM-minnet är från Corsair, vars namn är <i>Corsair Vengeance LED</i>, och man kan få två stycken 8GB RAM-stickor för runt 1 700kr.
         </p>
+        <h4>Slutsats</h4>
+        <p>
+
+        </p>
       </div>
       <div>
         <aside>
