--- a/ram.html
+++ b/ram.html
@@ -36,7 +36,7 @@
         </p>
         <h4>Slutsats</h4>
         <p>
-
+          Man ska ha snabb och hög RAM-minne för den bästa prestandan.
         </p>
       </div>
       <div>
