--- a/hårddisk.html
+++ b/hårddisk.html
@@ -45,7 +45,7 @@
           därmed fått sitt namn: Solid State Drive. Till skillnad från andra flashminnen så raderas inte datan på en SSD när
           strömmen stängs av.
           <br> <br>
-          Då en SDD inte använder rörliga delar gör den mycket snabbare, tystare och mindre känslig
+          Då en SSD inte använder rörliga delar gör den mycket snabbare, tystare och mindre känslig
           för stötar än en hårddisk. I och med att en SSD använder flashminnen gör att den kan läsa och skriva information snabbare, och kan nå
           skriv- och läshastigheter uppåt mot 200-520 MB/s.
           <br> <br>
