--- a/kontakta.html
+++ b/kontakta.html
@@ -17,13 +17,13 @@
     <main>
       <div class="main_text">
         <h1>Kontakt uppgifter:</h1>
-        <p> <a href="Snapcode.png">Snapchat:</a> kajol53 </p>
+        <p> <a href="img/snapcode.png">Snapchat:</a> kajol53 </p>
         <p> <a href="https://www.instagram.com/tostleblogger/?hl=sv">Instagram: </a>tostleblogger </p>
         <p> <a href="mailto:carjoh14@kfvelev.se">Email:</a> carjoh14@kfvelev.se </p>
       </div>
       <div>
         <aside>
-          <img src="img/Snapcode.png" alt="">
+          <img src="img/snapcode.png" alt="">
         </aside>
       </div>
     </main>
