--- a/meny.html
+++ b/meny.html
@@ -28,7 +28,7 @@
       <br>
       <div class="row3">
         <a href="nätaggregat.html">NÄTAGGREGAT</a>
-        <a href="ram.html">RAM</a>
+        <a href="ram.html">RAM-minne</a>
       </div>
     </main>
     <footer>
